1.10.0+1.21 (#136)
* initial work on 1.20.5

* initial work on 1.20.6

* make it compile and fix some TODOs'

* fix some more TODOs

* Fix keyboard inputs (such as recipe pinning & search) not working for smithing table and brewing stand

* Bump patch version due to previous bugfix that appears to have been a non-version specific bug.

Initial work on forge (waiting on dependencies)

Fix PotionLoader not working on Multiplayer servers and streamline code

Fix having to press ESCAPE twice to exit a screen using GenericRecipeBookComponent when GUI is not offset.

* revert version back to 1.10.0

* initial support for neoforge

* remove unneeded neoforge mixin

* cleanup some build resource filtering logic
fix missing mod icon in neoforge version

* update version compatibility table

* initial work on 1.21

* Make it compile

* bump versions